--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body class="body">
     <div class="wraper">
         <header class="header">
-            <img src="\picture\I.jpg" alt="my-photo" class="photo">
+            <img src="./picture/I.jpg" alt="my-photo" class="photo">
             <h1 class="name">Artsem Tamaseuski</h1>
         </header>
         <main class="main">
@@ -43,8 +43,8 @@
             </section>
         </main>
         <footer class="footer">
-            <a href="https://github.com/a-tom-v" class="gihub-link"><img src="\picture\github.png" alt="my-github" class="github-logo"></a>
-            <a href="https://rs.school/js/" class="rss-link"><img src="\picture\rs_school_js.svg" alt="rs-school-js" class="rss-logo"></a>
+            <a href="https://github.com/a-tom-v" class="gihub-link"><img src="./picture/github.png" alt="my-github" class="github-logo"></a>
+            <a href="https://rs.school/js/" class="rss-link"><img src="./picture/rs_school_js.svg" alt="rs-school-js" class="rss-logo"></a>
         </footer>
     </div>
 </body>
