refactor: chaged html and css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Artsem Tamaseuski</title>
-    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="body">
@@ -16,14 +15,14 @@
         </header>
         <main class="main">
             <section class="contacts">
-                <h3 class="h3">Contacts:</h3>
+                <h2 class="h2">Contacts:</h2>
                 <ul class="contacts-list">
                     <li class="mobile"><h4>mobile:</h4> +375(29)878-88-45</li>
                     <li class="email"><h4>e-mail:</h4> atom671@gmail.com</li>
                 </ul>
             </section>
             <section class="skills">
-                <h3 class="h3">Skills:</h3>
+                <h2 class="h2">Skills:</h2>
                 <ul class="slkills-list">
                     <li>Html -- basic</li>
                     <li>CSS -- basic</li>
@@ -32,14 +31,15 @@
                 </ul>
             </section>
             <section class="education">
-                <h3 class="education-title">Education:</h3>
-                <p><h4>Belarusian State Medical University,</h4>
-                    medical faculty (1999 -2000),
-                    pulmonologist Speciality: pulmonologist, radiologist.</p>
-                <p><h4>RS Shcool JS / FRONT-END</h4> in progress </p>
+                <h2 class="education-title">Education:</h2>
+                <h4>Belarusian State Medical University,</h4>
+                <p>medical faculty (1999 -2000),
+                pulmonologist Speciality: pulmonologist, radiologist.</p>
+                <h4>RS Shcool JS / FRONT-END</h4>
+                <p>in progress </p>
             </section>
             <section class="example">
-                <h3 class="h3">Expamples of code <a href="https://github.com/a-tom-v">here</a> </h3>
+                <h2 class="h2">Expamples of code <a href="https://github.com/a-tom-v">here</a> </h2>
             </section>
         </main>
         <footer class="footer">
