align-items: center;

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </main>
         <footer class="footer">
             <a href="https://github.com/a-tom-v" class="gihub-link"><img src="./picture/github.png" alt="my-github" class="github-logo"></a>
+            <h2 class="data">2022</h2>
             <a href="https://rs.school/js/" class="rss-link"><img src="./picture/rs_school_js.svg" alt="rs-school-js" class="rss-logo"></a>
         </footer>
     </div>
